[package]
authors = ["J David Smith <emallson@atlanis.net>"]
name = "waluigid"
version = "0.1.0"

[dependencies]
chan = "0.1.19"
docopt = "0.8.1"
error-chain = "0.10.0"
futures = "0.1.14"
num_cpus = "1.6.2"
serde = "1.0.8"
serde_derive = "1.0.8"
slog = "2.0.6"
slog-async = "2.0.1"
slog-term = "2.0.1"
tempdir = "0.3.5"
tokio-core = "0.1.8"
