[package]
authors = ["J David Smith <emallson@atlanis.net>"]
name = "waluigid"
version = "0.1.0"

[dependencies]
chan = "0.1.19"
docopt = "0.8.1"
error-chain = "0.10.0"
futures = "0.1.14"
futures-cpupool = "0.1.5"
libc = "0.2.24"
multiqueue = "0.3.2"
nom = "3.1.0"
num_cpus = "1.6.2"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
sha3 = "0.6.0"
slog = "2.0.6"
slog-async = "2.0.1"
slog-term = "2.0.1"
tempdir = "0.3.5"
tempfile = "2.1.5"
tokio-core = "0.1.8"
tokio-process = "0.1.3"

[dependencies.waluigi-lib]
path = "../waluigi-lib"
